plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.message'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2024.0.0")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.json:json:20231013'
	implementation 'com.auth0:java-jwt:3.15.0'

	// Spring Cloud AWS
	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.2.1')
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.3.0'
	implementation 'software.amazon.awssdk:sns'
	implementation 'com.amazonaws:aws-java-sdk-sns:1.12.196'



	// ModelMapper
	implementation 'org.modelmapper:modelmapper:3.2.0'

	// Logging
	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

	// Swagger for API documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'

	// Database
	implementation 'org.postgresql:postgresql'

	// Test Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}